--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -13,8 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/name"
-        android:textColor="@color/black"
+        android:textColor="@color/teal_700"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/product_name"
         app:layout_constraintStart_toStartOf="@+id/product_image" />
 
@@ -23,8 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/description"
-        android:textColor="@color/black"
+        android:textColor="@color/teal_700"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/product_description"
         app:layout_constraintStart_toStartOf="@+id/price" />
 
@@ -46,8 +48,9 @@
         android:layout_marginStart="26dp"
         android:layout_marginBottom="30dp"
         android:text="@string/contact_info"
-        android:textColor="@color/black"
+        android:textColor="@color/teal_700"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/contact_name"
         app:layout_constraintStart_toStartOf="@+id/contact_name" />
 
@@ -56,8 +59,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/name"
-        android:textColor="@color/black"
+        android:textColor="@color/teal_700"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/contact_name"
         app:layout_constraintEnd_toEndOf="@+id/P_name"
         app:layout_constraintStart_toStartOf="@+id/description" />
@@ -89,8 +93,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/number"
-        android:textColor="@color/black"
+        android:textColor="@color/teal_700"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/contact_number"
         app:layout_constraintStart_toStartOf="@+id/C_name" />
 
@@ -121,8 +126,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/price"
-        android:textColor="@color/black"
+        android:textColor="@color/teal_700"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/product_price"
         app:layout_constraintStart_toStartOf="@+id/P_name" />
 
@@ -146,8 +152,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/product_page"
-        android:textColor="@color/black"
+        android:textColor="@color/teal_700"
         android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageButton3"
         app:layout_constraintTop_toBottomOf="@+id/imageButton3" />
 
