--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,9 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/Search"
-        android:icon="@drawable/ic_baseline_search_24"
-        android:title="@string/search"
-        app:actionViewClass="android.widget.SearchView"
+    <item android:id="@+id/logout"
+        android:icon="@drawable/ic_logout"
+        android:title="@string/logout"
         app:showAsAction="always"/>
 </menu>
