--- a/app/src/main/res/layout/profile_recycle_view.xml
+++ b/app/src/main/res/layout/profile_recycle_view.xml
@@ -20,8 +20,8 @@
 
         <ImageView
             android:id="@+id/product_image_rec"
-            android:layout_width="200dp"
-            android:layout_height="100dp"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:elevation="5dp"
             android:fadingEdge="horizontal"
@@ -31,7 +31,8 @@
             android:id="@+id/ProductName_rec"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/product_image_rec"
+            android:layout_toEndOf="@id/product_image_rec"
+            android:paddingStart="20dp"
             android:text="ProductName"
             android:textColor="@color/black"
             android:textSize="24sp" />
@@ -41,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/ProductName_rec"
+            android:paddingStart="20dp"
             android:layout_toRightOf="@id/product_image_rec"
             android:text="Price"
             android:textColor="@color/black"
