location feature update

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -150,12 +150,12 @@
         android:id="@+id/u_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="36dp"
         android:text="@string/user_name"
         android:textColor="@color/teal_700"
-        android:textSize="25sp"
-        android:textStyle="bold|italic"
+        android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView10"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -163,7 +163,7 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
+        android:layout_marginStart="108dp"
         android:text="@string/hi"
         android:textColor="@color/black"
         android:textSize="30sp"
