--- a/app/src/main/res/layout/profile_recycle_view.xml
+++ b/app/src/main/res/layout/profile_recycle_view.xml
@@ -14,7 +14,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@color/teal_700"
         android:backgroundTint="@null">
 
@@ -31,10 +31,12 @@
             android:id="@+id/ProductName_rec"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="45dp"
             android:layout_toEndOf="@id/product_image_rec"
             android:paddingStart="20dp"
             android:text="ProductName"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             android:textSize="24sp" />
 
         <TextView
@@ -42,10 +44,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/ProductName_rec"
-            android:paddingStart="20dp"
             android:layout_toRightOf="@id/product_image_rec"
+            android:paddingStart="20dp"
             android:text="Price"
-            android:textColor="@color/black"
+            android:layout_marginBottom="45dp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             android:textSize="20sp" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
